- Generics - StringBuffer -> StringBuilder - Minor modernizations
Signed-off-by: pizzi80 <paolo@given2.com>